<resources>
    <string name="app_name">ExchangeRate</string>
    <string name="btn_dollar">Dollar</string>
    <string name="btn_euro">Euro</string>
    <string name="btn_won">Won</string>
    <string name="btn_config">Config</string>
    <string name="editText2">DollarRate</string>
    <string name="editText3">EuroRate</string>
    <string name="editText4">WonRate</string>
    <string name="btn_save">save</string>
    <string name="menu_settings">ExRateList</string>
    <string name="textView">Hello</string>
    <string name="hint_1">input RMB</string>
    <string name="textView2">美元汇率：</string>
    <string name="textView3">欧元汇率：</string>
    <string name="textView4">韩元汇率：</string>
    <string name="listTitle">Title</string>
    <string name="listDetail">Detail</string>
    <string name="hint_2">in put RMB</string>
    <string name="nodata">No Data</string>
</resources>
